[tool.poetry]
name = "gccestimating"
version = "0.2.0"
description = "Generalized Cross Correlation estimation based on numpy."
authors = ["Siegfried Gündert <siegfried.guendert@googlemail.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16"

[tool.poetry.dev-dependencies]
ipython = ">= 8.10"
matplotlib = "^3.1"
pytest = "^5.0"
pytest-assume = "^2.2"
pytest-cov = "^2.7"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
